--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3381,3 +3381,13 @@ p.copyright {
   line-height: normal;
   /* Normal line height for text */
 }
+
+
+.screenshot-img {
+  height: 500px;
+  /* Set the desired height */
+  width: auto;
+  /* Maintain aspect ratio */
+  object-fit: cover;
+  /* Cover the area without distorting the image */
+}
