--- a/assets/css/bxslider/jquery.bxslider.css
+++ b/assets/css/bxslider/jquery.bxslider.css
@@ -31,13 +31,13 @@
 
 .bx-wrapper .bx-viewport {
 	left: -5px;
-	
+
 	/*fix other elements on the page moving (on Chrome)*/
 	-webkit-transform: translatez(0);
 	-moz-transform: translatez(0);
-    	-ms-transform: translatez(0);
-    	-o-transform: translatez(0);
-    	transform: translatez(0);
+	-ms-transform: translatez(0);
+	-o-transform: translatez(0);
+	transform: translatez(0);
 }
 
 .bx-wrapper .bx-pager,
@@ -102,23 +102,23 @@
 .bx-wrapper .bx-prev {
 	left: -5px;
 	top: 50%;
-    -webkit-border-top-right-radius: 3px;
-    -webkit-border-bottom-right-radius: 3px;
-    -moz-border-radius-topright: 3px;
-    -moz-border-radius-bottomright: 3px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px
+	-webkit-border-top-right-radius: 3px;
+	-webkit-border-bottom-right-radius: 3px;
+	-moz-border-radius-topright: 3px;
+	-moz-border-radius-bottomright: 3px;
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px
 }
 
 .bx-wrapper .bx-next {
 	right: 5px;
 	top: 50%;
-    -webkit-border-top-left-radius: 3px;
-    -webkit-border-bottom-left-radius: 3px;
-    -moz-border-radius-topleft: 3px;
-    -moz-border-radius-bottomleft: 3px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
+	-webkit-border-top-left-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	-moz-border-radius-topleft: 3px;
+	-moz-border-radius-bottomleft: 3px;
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
 }
 
 .bx-wrapper .bx-prev:hover {
@@ -130,17 +130,17 @@
 }
 
 .bx-wrapper .bx-controls-direction a {
-position: absolute;
-margin-top: -20px;
-outline: 0;
-display: block;
-width: 40px;
-height: 40px;
-font-size: 21px;
-background: rgba(255,255,255,.8);
-text-indent: -9999px;
-cursor: pointer;
-z-index: 999;
+	position: absolute;
+	margin-top: -20px;
+	outline: 0;
+	display: block;
+	width: 40px;
+	height: 40px;
+	font-size: 21px;
+	background: rgba(255, 255, 255, .8);
+	text-indent: -9999px;
+	cursor: pointer;
+	z-index: 999;
 }
 
 .bx-wrapper .bx-controls-direction a.disabled {
@@ -216,67 +216,68 @@ z-index: 999;
 
 
 
-@media only screen and (min-width: 1024px) { 
+@media only screen and (min-width: 1024px) {
 
-    .bx-controls-direction a {
-        opacity: 0;
-        transition: opacity .25s ease-in-out;
-        -moz-transition: opacity .25s ease-in-out;
-        -webkit-transition: opacity .25s ease-in-out;
-    }
-    .bx-wrapper:hover .bx-controls-direction a {
-        opacity: 1;
-    }
+	.bx-controls-direction a {
+		opacity: 0;
+		transition: opacity .25s ease-in-out;
+		-moz-transition: opacity .25s ease-in-out;
+		-webkit-transition: opacity .25s ease-in-out;
+	}
+
+	.bx-wrapper:hover .bx-controls-direction a {
+		opacity: 1;
+	}
 }
 
 
 
 .bx-wrapper .bx-controls-direction a:hover:after {
-	color: #000;
+	color: #1f4365;
 }
 
 .bx-wrapper .bx-prev:after {
 	content: "\f104";
-display: block;
-width: 100%;
-height: 100%;
-padding-right: 2px;
--moz-box-sizing: border-box;
-box-sizing: border-box;
-color: #212121;
-font-family: "FontAwesome";
-font-style: normal;
-font-weight: 400;
-font-size: 21px;
-text-align: center;
-text-indent: 0 !important;
-line-height: 40px !important;
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	padding-right: 2px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	color: #212121;
+	font-family: "FontAwesome";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 21px;
+	text-align: center;
+	text-indent: 0 !important;
+	line-height: 40px !important;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 
 .bx-wrapper .bx-next:after {
-   	content: "\f105";
-display: block;
-width: 100%;
-height: 100%;
-padding-right: 2px;
--moz-box-sizing: border-box;
-box-sizing: border-box;
-color: #212121;
-font-family: "FontAwesome";
-font-style: normal;
-font-weight: 400;
-font-size: 21px;
-text-align: center;
-text-indent: 0 !important;
-line-height: 40px !important;
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-bottom: 0;
+	content: "\f105";
+	display: block;
+	width: 100%;
+	height: 100%;
+	padding-right: 2px;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	color: #212121;
+	font-family: "FontAwesome";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 21px;
+	text-align: center;
+	text-indent: 0 !important;
+	line-height: 40px !important;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
