--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3620,7 +3620,7 @@ p.copyright {
 
 
 .row {
-  display: flex;
+  /* display: flex; */
   /* Use flexbox to create a flex container */
   justify-content: space-around;
   /* Space items evenly */
