--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,6 +517,8 @@ p {
   display: block;
 }
 
+
+
 /***********************************************************************************************/
 /* =Hero section */
 /***********************************************************************************************/
@@ -3220,6 +3222,43 @@ p.copyright {
 
 }
 
+
+/* Ensure the menu icon (toggle button) is only visible on screens smaller than 1000px */
+.navbar-toggle {
+  display: none;
+}
+
+@media (max-width: 1200px) {
+  .navbar-toggle {
+    display: block;
+    /* Show the toggle button on smaller screens */
+  }
+
+  /* Remove the borders on small screens */
+  .navbar-nav>li>a {
+    border: none;
+  }
+}
+
+/* Add borders for each menu item when width is greater than 1000px */
+@media (min-width: 1201px) {
+  .navbar-nav>li>a {
+    /* border: 1px solid #ccc; */
+    /* border-radius: 5px; */
+    /* Add a border to each menu item */
+    margin-right: 5px;
+    /* Add some spacing between items */
+    padding: 8px 15px;
+    /* Adjust padding for better appearance */
+  }
+
+  .navbar-nav>li:last-child>a {
+    margin-right: 0;
+    /* Remove right margin for the last item */
+  }
+}
+
+
 .navbar .container {
   width: auto;
   margin-right: 0px;
@@ -3232,8 +3271,8 @@ p.copyright {
 @media (max-width: 1199px) {
   .navbar-collapse {
     display: none;
-    /* Hide the menu items */
   }
+
 
   .navbar-nav {
     display: none;
@@ -3249,12 +3288,10 @@ p.copyright {
 @media (min-width: 1200px) {
   .navbar-collapse {
     display: flex;
-    /* Show menu items */
   }
 
   .navbar-toggle {
     display: none;
-    /* Hide the menu icon */
   }
 }
 
@@ -3482,9 +3519,10 @@ p.copyright {
 
 
 
+
 @media (max-width: 1200px) {
   .company-name {
-    font-size: 28px;
+    font-size: 18px;
     line-height: 1.3;
     margin-bottom: 5px;
     /* margin-top: 40px; */
@@ -3511,7 +3549,7 @@ p.copyright {
 
 @media (max-width: 1300px) {
   .company-name {
-    font-size: 20px;
+    font-size: 18px;
     /* Adjust font size for smaller screens */
     line-height: 1.3;
   }
@@ -3555,26 +3593,15 @@ p.copyright {
   text-align: left;
 }
 
-/* Adjust font and spacing for .company-name */
-.company-name {
-  font-size: 35px;
-  font-weight: bold;
-  color: #1f4365;
-  margin-left: 10px;
 
-  margin-top: 15px;
-  /* line-height: 1.2;  */
-  /* Spacing between logo and name */
-}
 
 
 
 .navbar-nav {
   margin-left: auto;
+  margin-right: 30px;
   /* Pushes the menu items to the right */
 }
-
-
 
 /* Menu item hover and focus color */
 .navbar-nav>li>a {
@@ -3721,4 +3748,40 @@ p.copyright {
   /* Space above alert */
   color: #d9534f;
   /* Alert text color */
+}
+
+
+/* Ensure toggle button is hidden on large screens */
+@media (min-width: 1200px) {
+  .navbar-toggle {
+    display: none;
+  }
+
+  .navbar-collapse {
+    display: flex !important;
+  }
+}
+
+/* Show toggle button and hide navbar collapse by default on smaller screens */
+@media (max-width: 1200px) {
+  .navbar-toggle {
+    display: block;
+  }
+
+  /* .navbar-collapse {
+    display: none;
+  } */
+
+  .navbar-collapse.in {
+    display: block !important;
+  }
+}
+
+
+/* Adjust font size for smaller screens */
+@media (max-width: 600px) {
+  .company-name {
+    font-size: 20px;
+    /* Reduce font size to 15px */
+  }
 }
